update form wizard

--- a/src/utils/locales/en.json
+++ b/src/utils/locales/en.json
@@ -9,5 +9,6 @@
   "more-items": "More Items",
   "pages": "Pages",
   "sample-page": "Book Appoinment",
-  "under-construction": "Under Construction"
+  "under-construction": "Under Construction",
+  "forms-wizard": "Forms Wizard"
 }
